# FFmpegDemo

app/: build.gradle
app/src/androidTest/java/com/hudun/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpegs/: config.h
app/src/main/cpp/ffmpegs/libavformat/: os_support.h
app/src/main/java/com/hudun/ffmpegdemo/: MainActivity.kt
app/src/test/java/com/hudun/ffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
